fixed engbar mobile android scrollbar bug

--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,7 @@ header {
 }
 
 .bar-page-ENG-about-item {
-    width: 350px;
+    width: 320px;
 }
 
 
